# desktop_application

./: README.md  pyproject.toml  requirements.txt
src/: main.py
